--- a/recocollector/main_app/templates/movies/index.html
+++ b/recocollector/main_app/templates/movies/index.html
@@ -3,6 +3,25 @@
 
 <h1>A list of movies recommended JUST for you</h1>
 <hr />
-<p>list movies here</p>
+<div class="row">
+    {% for reco in reco %}
+    <div class="col s12 m6 l3">
+        <div class="card">
+            <div class="card-image">
+              <img src="../../static/images/office.jpg">
+              <span class="card-title">{{movie.title}}</span>
+            </div>
+            <div class="card-content">
+              <p>How did I hear about this movie? {{movie.howHeard}}</p>
+            </div>
+            <div class="card-action">
+              <a href="#">More details</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+
 
 {% endblock %}
