style and images

--- a/recocollector/main_app/templates/about.html
+++ b/recocollector/main_app/templates/about.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+<h4>about ShareFlix</h4>
+<hr/>
 
-<h1>About the Movie Collector</h1>
-<hr />
-<p>Save your movie recommendations</p>
 
 {% endblock %}
