--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -16,7 +16,7 @@
 <body>
   <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo center">Logo</a>
+        <a href="../" class="brand-logo center">ShareFlix</a>
         <ul class="left hide-on-med-and-down">
           <li><a href="../about/">About</a></li>
           <li><a href="../new/">Add a reco</a></li>
@@ -25,13 +25,12 @@
         </ul>
       </div>
   </nav>
-
   <main class="container">
     {% block content %}
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2020 ShareFlix</div>
   </footer>
   <script type="text/Javascript" src="../static/js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
