--- a/recocollector/main_app/templates/index.html
+++ b/recocollector/main_app/templates/index.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>the home page</h1>
-<hr />
-
+<div class="row">
+    <div class="col s12 m6">
+        <blockquote>
+            <h1 class="center">What's on your watch list?</h1>
+        </blockquote>
+    </div>
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+            <span class="card-title">Stop wasting time searching for the next thing to watch.</span> 
+            <p>Create your first list today!</p>
+        </div>
+        <div class="card-action">
+            <a href="./new">Add a movie</a>
+          </div>
+      </div>
+    </div>
 
 {% endblock %}
