--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -18,10 +18,10 @@
       <div class="nav-wrapper">
         <a href="../" class="brand-logo center">ShareFlix</a>
         <ul class="left hide-on-med-and-down">
-          <li><a href="../about/">About</a></li>
-          <li><a href="../new/">Add a reco</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'new_reco' %}">Add a reco</a></li>
           <li class="divider"></li>
-          <li><a href="../recommendations/">My List of Recos</a></li>
+          <li><a href="{% url 'my_recos' %}">My List of Recos</a></li>
         </ul>
       </div>
   </nav>
