style and detail page

--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -1,33 +1,54 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Reco Collector</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Reco Collector</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </head>
   
-<body>
-  <header class="navbar-fixed">
-    <nav>
+  <body>
+    <header class="navbar-fixed">
+      <nav>
         <div class="nav-wrapper">
-          <a href="../" class="brand-logo center">ShareFlix</a>
-          <ul class="left hide-on-med-and-down">
+          <a href="../" class="brand-logo center">ShareFlix</a>        
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
             <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'new_reco' %}">Add a reco</a></li>
-            <li class="divider"></li>
-            <li><a href="{% url 'my_recos' %}">My List of Recos</a></li>
+            <li><a href="{% url 'new_reco' %}">Add to my list</a></li>
+            <li><a href="{% url 'my_recos' %}">My Watch List</a></li>
           </ul>
         </div>
-    </nav>
-  </header>
-  <main class="container">
-    {% block content %}
-    {% endblock %}
-  </main>
+      </nav>
+    
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'new_reco' %}">Add to my list</a></li>
+        <li><a href="{% url 'my_recos' %}">My Watch List</a></li>
+      </ul>
+    </header>
+
+    <main class="container">
+      {% block content %}
+      {% endblock %}
+    </main>
+
     <footer class="page-footer center">
-      All Rights Reserved, &copy; 2020 ShareFlix
+      <div class="right">
+        All Rights Reserved, &copy; 2020 ShareFlix &nbsp;
+      </div>
     </footer>
-</body>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        let navEl = document.querySelectorAll('.sidenav');
+        let instance = M.Sidenav.init(navEl, {
+          edge: 'left'
+          });
+      });
+    </script>
+  </body>
 </html>
