--- a/recocollector/main_app/templates/index.html
+++ b/recocollector/main_app/templates/index.html
@@ -1,22 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <div class="row">
-    <div class="col s12 m6">
+    <div class="col s12 m12 l6">
         <blockquote>
-            <h1 class="center">What's on your watch list?</h1>
+            <h3 class="center">Stop wasting time searching for the next thing to watch.</h3>
         </blockquote>
     </div>
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-            <span class="card-title">Stop wasting time searching for the next thing to watch.</span> 
-            <p>Create your first list today!</p>
-        </div>
-        <div class="card-action">
-            <a href="./new">Add a movie</a>
-          </div>
-      </div>
+    <div class="valign-wrapper col s12 m12 l6">
+        <a href="{% url 'new_reco' %}" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Start now</a>
+        </button>
     </div>
+</div>
 
 {% endblock %}
