fix materialize css

--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Reco Collector</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   
   <body>
@@ -24,13 +25,12 @@
           </ul>
         </div>
       </nav>
-    
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'new_reco' %}">Add to my list</a></li>
-        <li><a href="{% url 'my_recos' %}">My Watch List</a></li>
-      </ul>
     </header>
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'new_reco' %}">Add to my list</a></li>
+          <li><a href="{% url 'my_recos' %}">My Watch List</a></li>
+        </ul>
 
     <main class="container">
       {% block content %}
