--- a/recocollector/main_app/templates/movies/detail.html
+++ b/recocollector/main_app/templates/movies/detail.html
@@ -2,14 +2,33 @@
 {% block content %}
 
 <h3>More info</h3>
-
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ reco.title }}</span>
-    <p>How heard: {{ reco.how_heard }}</p>
-    <p>Where: {{ reco.where }}</p>
-    <p>Why watch it? {{ reco.description }}</p>
+<div class="row">
+  <div class="col s12 m6 l6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ reco.title }}</span>
+        <p>How heard: {{ reco.how_heard }}</p>
+        <p>Where: {{ reco.where }}</p>
+        <p>Why watch it? {{ reco.description }}</p>
+      </div>
+    </div>
   </div>
 </div>
-
+<div class=row>
+  <div class="col s12">
+    <table class="striped">
+      <thead>
+        <tr><th>Date Watched</th><th>Notes</th></tr>
+      </thead>
+      <tbody>
+        {% for note in reco.notes_set.all %}
+          <tr>
+            <td>{{note.date}}</td>
+            <td>{{note.get_notes_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
 {% endblock %}
