--- a/recocollector/main_app/templates/movies/detail.html
+++ b/recocollector/main_app/templates/movies/detail.html
@@ -11,9 +11,21 @@
         <p>Where: {{ reco.where }}</p>
         <p>Why watch it? {{ reco.description }}</p>
       </div>
+      <div class="card-action">
+        <a href="{% url 'reco_update' reco.id %}">Edit</a>
+        <a href="{% url 'reco_delete' reco.id %}">Delete</a>
+      </div>
     </div>
   </div>
+  <div class="col s6">
+    <form method="post">
+      {% csrf_token %}
+      {{ notes_form.as_p }}
+      <input type="submit" class="btn" value="Add Notes">
+    </form>
+  </div>
 </div>
+
 <div class=row>
   <div class="col s12">
     <table class="striped">
