--- a/recocollector/main_app/templates/movies/detail.html
+++ b/recocollector/main_app/templates/movies/detail.html
@@ -18,10 +18,10 @@
     </div>
   </div>
   <div class="col s6">
-    <form method="post">
+    <form action="{% url 'add_note' reco.id %}" method="post">
       {% csrf_token %}
       {{ notes_form.as_p }}
-      <input type="submit" class="btn" value="Add Notes">
+      <input type="submit" class="btn" value="Add">
     </form>
   </div>
 </div>
@@ -36,11 +36,22 @@
         {% for note in reco.notes_set.all %}
           <tr>
             <td>{{note.date}}</td>
-            <td>{{note.get_notes_display}}</td>
+            <td>{{note.note}}</td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
 </div>
+
+<!-- Script for date picker stylizing -->
+<script>
+  var dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+</script>
 {% endblock %}
