final styles, tweak some headings

--- a/recocollector/main_app/templates/about.html
+++ b/recocollector/main_app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h4>about ShareFlix</h4>
+<h4>About The Movie Collector</h4>
 <hr/>
-
+<p>A site for movie enthusiasts, to keep a record of what movies they want to watch and some details on their experience of watching it.</p>
 
 {% endblock %}
