--- a/recocollector/main_app/templates/main_app/reco_form.html
+++ b/recocollector/main_app/templates/main_app/reco_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Create your first list</h3>
+<h3>Add a movie</h3>
 <hr />
 <form action="" method="post">
     <!-- Django requires the following for security purposes -->
