--- a/recocollector/main_app/templates/movies/index.html
+++ b/recocollector/main_app/templates/movies/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>My Watch List</h3>
+<h3>My Movie List</h3>
 <hr />
 <div class="row">
   {% for reco in recos %}
