--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -16,7 +16,7 @@
     <header class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
-          <a href="../" class="brand-logo center">ShareFlix</a>        
+          <a href="../" class="brand-logo center">The Movie Collector</a>        
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{% url 'about' %}">About</a></li>
@@ -39,7 +39,7 @@
 
     <footer class="page-footer center">
       <div class="right">
-        All Rights Reserved, &copy; 2020 ShareFlix &nbsp;
+        All Rights Reserved, &copy; 2020 zoe.SuperNova &nbsp;
       </div>
     </footer>
     <script>
