--- a/recocollector/main_app/templates/index.html
+++ b/recocollector/main_app/templates/index.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
     <div class="col s12 m12 l6">
-        <blockquote>
-            <h3 class="center">Stop wasting time searching for the next thing to watch.</h3>
+        <blockquote class="center">
+            <h3 class="">Keep detailed records of your favourite movies.</h3>
+            <p class=""><a href="{% url 'new_reco' %}" class="center align waves-effect waves-light btn"><i class="material-icons left">send</i>Start now</a></p>
         </blockquote>
     </div>
-    <div class="valign-wrapper col s12 m12 l6">
-        <a href="{% url 'new_reco' %}" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Start now</a>
-        </button>
-    </div>
-</div>
+
 
 {% endblock %}
