--- a/recocollector/main_app/templates/movies/detail.html
+++ b/recocollector/main_app/templates/movies/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>More info</h3>
+<h3>Now Showing</h3>
 <div class="row">
   <div class="col s12 m6 l6">
     <div class="card">
