--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -38,8 +38,8 @@
     </main>
 
     <footer class="page-footer center">
-      <div class="right">
-        All Rights Reserved, &copy; 2020 zoe.SuperNova &nbsp;
+      <div class="valign-wrapper right">
+        Created by &nbsp<a class="valign-wrapper white-text" href="https://github.com/zsiskos">zoe.SuperNova &nbsp <img src="../static/images/GitHub-Mark-32px.png">&nbsp</a>
       </div>
     </footer>
     <script>
