add template literal for footer image to show on all pages

--- a/recocollector/main_app/templates/base.html
+++ b/recocollector/main_app/templates/base.html
@@ -39,7 +39,7 @@
 
     <footer class="page-footer center">
       <div class="valign-wrapper right">
-        Created by &nbsp<a class="valign-wrapper white-text" href="https://github.com/zsiskos">zoe.SuperNova &nbsp <img src="../static/images/GitHub-Mark-32px.png">&nbsp</a>
+        Created by &nbsp<a class="valign-wrapper white-text" href="https://github.com/zsiskos">zoe.SuperNova &nbsp <img src="{% static 'images/GitHub-Mark-32px.png' %}">&nbsp</a>
       </div>
     </footer>
     <script>
